# cloud-gateway-for-amazon-kinesis-video-streams

./: .gitignore  AWS_SETUP.md  ENHANCED_PIPELINE_GENERATOR_SPECIFICATION.md  PHASE_7_INTEGRATION_SUMMARY.md  PIPELINE_GENERATOR_README.md  PROJECT_ROADMAP.md  README.md  RTSP_TEST_SERVER_INTEGRATION_PLAN.md  RTSP_TEST_SERVER_SPECIFICATION.md  RTSP_TEST_SERVER_VALIDATION_REPORT.md  TEST_VERIFICATION_REPORT.md
.amazonq/rules/: integration-rules.md  project-rules.md  temporary-file-naming.md
cdk-pipeline-generator/: CAMERA_MANAGEMENT_README.md  README.md  cdk.json  deploy-camera-management.sh  deploy-composite-key-update.sh  deploy.sh  package-lock.json  package.json  test-camera-api.py
docker-images/: Dockerfile  README.md  run-kvs-pipeline  run-kvs-rtsp-pipeline  run-test-pipeline  set-aws-env  set-aws-env.template  set-gst-env
ec2-cdk-app/: README.md
ec2-cdk-app/lib/: ec2-cdk-stack.ts
ec2-cdk-app/src/: config.sh  stream-rtsp-to-kvs.service  stream-rtsp-to-kvs.sh
enhanced-pipeline-generator/: Dockerfile  README.md  app.ts  deploy.sh  enhanced-pipeline-stack.ts  enhanced_lambda_function.py  package.json  requirements.txt  rtsp_analysis.py
fargate-cdk-app/: README.md  index.ts  package.json
fargate-cdk-app/local-image/: Dockerfile  stream-rtsp-to-kvs.sh
frontend-app/: .env.example  CLOUDSCAPE_MIGRATION.md  FRONTEND_README.md  ISSUE_RESOLUTION_SUMMARY.md  QUICK_TESTER_README.md  README.md  TODO.md  index.html  package-lock.json  package.json
frontend-app/amplify/: team-provider-info.json
frontend-app/src/: App.css  App.tsx  main.tsx
gstreamer-expert-system/: GSTREAMER_TOOLS_REFERENCE.md  KB_ENHANCEMENT_PLAN.md  KVS_COMPATIBILITY_ANALYSIS.md  PHASE_5_SUMMARY.md  PROJECT_ROADMAP.md  PROMPTING_TECHNIQUES_GUIDE.md  QUICK_PROMPTS_REFERENCE.md  Q_CLI_USAGE_GUIDE.md  README.md  REAL_DEVICE_TESTING_SPEC.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  SYSTEM_SPECIFICATION.md  TEST_SCENARIOS_README.md  cleanup-existing-resources.sh  evaluate_knowledge_base.py  kb_evaluation_results_20250827_110951.json  real_device_testing_starter.py  setup-complete-system.sh  simple_add_test.py  test_bedrock_expert.py  test_intelligent_analysis.py  test_q_cli_integration.py  test_results.json  test_scenarios.json  test_scenarios.py  validate_mcp_setup.py
gstreamer-expert-system/accuracy-testing/: AGENT_KB_VERIFICATION_REPORT.md  README.md  agent-accuracy-analysis.md  enhanced-accuracy-framework.py  interactive-accuracy-test.py  maximum-expertise-strategy.md  media-introspection-enhancement-report.md  quick-priority-test.py  quick-test-agents.py  test-agent-accuracy.py  test-agent-simple.py  test-agent-simple.sh  test-agent.py  test-priority-hierarchy.py
gstreamer-expert-system/core/: gstreamer_expert_core.py  knowledge_base_client.py  pipeline_analyzer.py  troubleshooter.py
gstreamer-expert-system/interfaces/: lambda_interface.py
gstreamer-expert-system/knowledgebase/: CONTENT_WORKFLOW.md  KB_QUICK_REFERENCE.md  KNOWLEDGE_BASE_MANAGEMENT_GUIDE.md  README.md  README_KB_MANAGEMENT.md  embedding-model-analysis.md  enhanced_quality_troubleshooting.md  kvs_feature_compatibility.md  precision-kb-strategy.md
gstreamer-expert-system/lambda-function/: lambda_handler.py  requirements.txt
gstreamer-expert-system/mcp-gstreamer-expert/: INTEGRATION.md  README.md  bedrock_gstreamer_expert.py  complete_multi_tool_server.py  requirements.txt  setup.sh  start_enhanced_server.sh
gstreamer-expert-system/mcp-server/: mcp_server.py  start_server.sh
lambda-sdp-extractor/: Dockerfile  lambda_function.py  requirements.txt
migration-scripts/: README.md  migrate-existing-cameras.py
rtsp-kvs-gateway/: CMakeLists.txt  README.md
rtsp-kvs-gateway/include/utils/: common.hpp
rtsp-kvs-gateway/scripts/: build.sh  install_deps.sh
rtsp-kvs-gateway/src/: main.cpp
simple-rtsp-server/: Dockerfile  README.md  SUPPORTED_CODECS.md  deploy.sh  docker-compose.yml  rtsp-server-streamlined.py  rtsp-server.py  test-rtsp-streams.py  test-streamlined-codecs.py
simple-rtsp-server/cdk-deployment/: cdk.context.json  cdk.json  package-lock.json  package.json
test-scripts/: README.md  extract-frames-from-existing-results.py  run-lambda-using-rtsp-test-server-urls.sh  simple_api_test.py  test-authentication.sh  test-basic-functionality.sh  test-frame-extraction.sh  test-lambda-using-rtsp-test-server-urls.py  test-pipeline-generator.py  test_characteristics_detailed.py  test_dual_mode.py  validate_all_tests.py
unified-streaming-platform/: CDK_UPDATE_SUMMARY.md  DEPRECATION_FIXES_SUMMARY.md  FRONTEND_CONFIG_README.md  PROJECT_PLAN.md  README.md  RTSP_HEALTH_CHECK_IMPROVEMENTS.md  UNIFIED_STREAMING_PLATFORM_SPECIFICATION.md  cleanup-old-stacks.sh  deploy.sh  frontend-config-template.json  generate-frontend-config.sh  migrate-frontend-config.sh  post-deployment-cleanup.sh  pre-deployment-validation.sh  requirements.txt  validate-deployment-readiness.sh
unified-streaming-platform/cdk-infrastructure/: README.md  app.ts  cdk.json  enhanced-pipeline-stack.ts  package.json
unified-streaming-platform/frontend/: FRONTEND_MIGRATION_GUIDE.md  README.md  TEST_PROGRESS.md  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
unified-streaming-platform/lambda-camera-management/: README.md
unified-streaming-platform/lambda-enhanced-pipeline/: Dockerfile  README.md  enhanced_lambda_function.py  gstreamer_expert.py  requirements.txt
unified-streaming-platform/rtsp-test-server/: Dockerfile  README.md  RTSP_TEST_SERVER_COVERAGE_ASSESSMENT.md  RTSP_TEST_SERVER_ENHANCEMENT_SUMMARY.md  RTSP_TEST_SERVER_PHASE_1_SUMMARY.md  RTSP_TEST_SERVER_SPECIFICATION.md  RTSP_TEST_SERVER_TESTING_SUMMARY.md  TESTING_SCRIPTS_SUMMARY.md  VALIDATION_GUIDE.md  comprehensive-rtsp-test.sh  cves.txt  health-check.py  kvssink-ecs-credentials-refresh.md  quick-rtsp-test.sh  rtsp-test-server-enhanced.py  rtsp-test-server.py  test-rtsp-server-codecs.py  validate-enhanced-rtsp-server.sh  validate-rtsp-test-server.sh
unified-streaming-platform/testing/: DYNAMIC_CONFIG_README.md  README.md  cognito-auth-test.py  comprehensive-api-test.py  (+8 more)
(+416 files in other folders)
